// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Products Reducer createProduct Should set loading state to true and error to empty string 1`] = `
Object {
  "entities": Object {},
  "error": "",
  "ids": Array [],
  "loaded": false,
  "loading": true,
  "total": 0,
}
`;

exports[`Products Reducer createProductFail Should set loading to false and populate error 1`] = `
Object {
  "entities": Object {},
  "error": "ERROR",
  "ids": Array [],
  "loaded": false,
  "loading": false,
  "total": 0,
}
`;

exports[`Products Reducer createProductSuccess Should add a product to entities, add one to total, set loading to false and error to empty string 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "active": true,
      "description": "lorem ipsum",
      "discount": 0,
      "id": "1",
      "name": "Whey Protein",
      "price": 100,
      "rating": 5,
      "stock": 100,
    },
  },
  "error": "",
  "ids": Array [
    "1",
  ],
  "loaded": false,
  "loading": false,
  "total": 1,
}
`;

exports[`Products Reducer deleteProduct Should set loading state to true and error to empty string 1`] = `
Object {
  "entities": Object {},
  "error": "",
  "ids": Array [],
  "loaded": false,
  "loading": true,
  "total": 0,
}
`;

exports[`Products Reducer deleteProductFail Should set loading to false and populate error 1`] = `
Object {
  "entities": Object {},
  "error": "ERROR",
  "ids": Array [],
  "loaded": false,
  "loading": false,
  "total": 0,
}
`;

exports[`Products Reducer deleteProductSuccess Should remove product from entities, remove one from total, set loading to false and error to empty string 1`] = `
Object {
  "entities": Object {
    "2": Object {
      "active": true,
      "description": "lorem ipsum",
      "discount": 0,
      "id": "2",
      "name": "Fat Burner",
      "price": 50,
      "rating": 5,
      "stock": 100,
    },
    "3": Object {
      "active": true,
      "description": "lorem ipsum",
      "discount": 0,
      "id": "3",
      "name": "Protein Bar",
      "price": 10,
      "rating": 5,
      "stock": 100,
    },
  },
  "error": "",
  "ids": Array [
    "2",
    "3",
  ],
  "loaded": true,
  "loading": false,
  "total": 1,
}
`;

exports[`Products Reducer getProducts Should remove all entities, set loading to true, loaded to false, total to 0 and clean the error 1`] = `
Object {
  "entities": Object {},
  "error": "",
  "ids": Array [],
  "loaded": false,
  "loading": true,
  "total": 0,
}
`;

exports[`Products Reducer getProductsFail Should set loading to false, loaded to false and populate error 1`] = `
Object {
  "entities": Object {},
  "error": "ERROR",
  "ids": Array [],
  "loaded": false,
  "loading": false,
  "total": 0,
}
`;

exports[`Products Reducer getProductsSuccess Should populate the state with products, total with products count, loading to false, loaded to true, and error to an empty string 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "active": true,
      "description": "lorem ipsum",
      "discount": 0,
      "id": "1",
      "name": "Whey Protein",
      "price": 100,
      "rating": 5,
      "stock": 100,
    },
    "2": Object {
      "active": true,
      "description": "lorem ipsum",
      "discount": 0,
      "id": "2",
      "name": "Fat Burner",
      "price": 50,
      "rating": 5,
      "stock": 100,
    },
    "3": Object {
      "active": true,
      "description": "lorem ipsum",
      "discount": 0,
      "id": "3",
      "name": "Protein Bar",
      "price": 10,
      "rating": 5,
      "stock": 100,
    },
  },
  "error": "",
  "ids": Array [
    "1",
    "2",
    "3",
  ],
  "loaded": true,
  "loading": false,
  "total": 2,
}
`;

exports[`Products Reducer updateProduct Should set loading state to true and error to empty string 1`] = `
Object {
  "entities": Object {},
  "error": "",
  "ids": Array [],
  "loaded": false,
  "loading": true,
  "total": 0,
}
`;

exports[`Products Reducer updateProductFail Should set loading to false and populate error 1`] = `
Object {
  "entities": Object {},
  "error": "ERROR",
  "ids": Array [],
  "loaded": false,
  "loading": false,
  "total": 0,
}
`;

exports[`Products Reducer updateProductSuccess Should update a product from the entities, set loading to false, and error to empty string 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "active": true,
      "description": "lorem ipsum",
      "discount": 0,
      "id": "1",
      "name": "Pre Workout",
      "price": 100,
      "rating": 5,
      "stock": 100,
    },
    "2": Object {
      "active": true,
      "description": "lorem ipsum",
      "discount": 0,
      "id": "2",
      "name": "Fat Burner",
      "price": 50,
      "rating": 5,
      "stock": 100,
    },
    "3": Object {
      "active": true,
      "description": "lorem ipsum",
      "discount": 0,
      "id": "3",
      "name": "Protein Bar",
      "price": 10,
      "rating": 5,
      "stock": 100,
    },
  },
  "error": "",
  "ids": Array [
    "1",
    "2",
    "3",
  ],
  "loaded": true,
  "loading": false,
  "total": 2,
}
`;
